--- a/src/components/CourseCard.css
+++ b/src/components/CourseCard.css
@@ -11,7 +11,7 @@
 
 /* Card style when selected */
 .card.selected {
-    background-color: #f5f5f5; /* grayish background */
+    background-color: #8ed29e; /* grayish background */
 }
 
 .title {
@@ -32,3 +32,4 @@
     font-size: 0.9rem;
     align-self: end;  
 }
+
