--- a/src/components/CourseCard.css
+++ b/src/components/CourseCard.css
@@ -33,3 +33,42 @@
     align-self: end;  
 }
 
+
+/* Styles for the selected button */
+
+.edit-button {
+    cursor: pointer;
+    position: relative;
+    top: -1px;  
+    left: 155px;
+    padding: 5px;  
+    border-radius: 8px;
+    border: none;
+    background-color: #007bff;
+    transition: background-color 0.3s, transform 0.3s;
+    font-size: 12px; 
+    color: white;
+    outline: none; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+}
+
+.edit-button.selected {
+    background-color: #007bff;
+    color: white; /* Changing the text color for contrast against the lightblue background */
+}
+
+/* Hover effects */
+.edit-button:hover {
+    background-color: #e0e0e0;
+    transform: scale(1.05);
+}
+
+.card-header {
+    position: relative;
+}
+
+
+
